--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
       <title>Test</title>
     </head>
 <body>
-  <p style='color:red'>Hello there !!</p>
+  <p style='color:blue'>Hello there !!</p>
 </body>
     
   </html>
