--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <Doctype html>
   <html>
     <head>
-      <title>ashraf site</title>
+      <title>{{company_name}} site</title>
       <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -15,7 +15,7 @@
 </style>
     </head>
 <body>
-  <h1>Ashraf Site</h1>
+  <h1>{{company_name}}  Site</h1>
   <img class='img-fluid' id='banner' src='https://images.unsplash.com/photo-1590092794015-bce5431c83f4?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=811&q=80' height='320'>
   <p style='color:blue'>Hello there !!</p>
 <p>
@@ -25,6 +25,18 @@
   <p class='container'>
 <h2 id='title2' class='container'>title 2</h2>
   Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere
+  </p>
+  <p>
+    <h2>Open Positions</h2>
+    <div >
+  {% for job in jobs %}
+{% include 'jobs.html' %}
+      {% endfor %}
+    </div>
+    </div>
+  
+  
+  
   </p>
   <body>
     
